--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ main {
     font-weight: 400;
     font-size: 20px;
     border-radius: 5px;
+    cursor: pointer;
 }
 .card .box-3 h4 {
     color: white;
